--- a/Copy_of_Final_notebook.ipynb
+++ b/Copy_of_Final_notebook.ipynb
@@ -13,13 +13,40 @@
     },
     {
       "cell_type": "code",
+      "metadata": {
+        "id": "c79a2995"
+      },
+      "source": [
+        "def build_cnn_backbone(input_shape=(16, 16, 4), embedding_dim=512):\n",
+        "    \"\"\"\n",
+        "    Lightweight CNN that produces a dense embedding layer of size `embedding_dim`.\n",
+        "    Final softmax head is used only for supervision. embeddings come from 'embedding' layer.\n",
+        "    \"\"\"\n",
+        "    inputs = layers.Input(shape=input_shape)\n",
+        "    x = layers.Conv2D(16, (3, 3), activation='relu', padding='same')(inputs)\n",
+        "    x = layers.MaxPooling2D((2, 2))(x)\n",
+        "    x = layers.Conv2D(32, (3, 3), activation='relu', padding='same')(x)\n",
+        "    x = layers.MaxPooling2D((2, 2))(x)\n",
+        "    x = layers.Conv2D(64, (3, 3), activation='relu', padding='same')(x)\n",
+        "    x = layers.GlobalAveragePooling2D()(x)\n",
+        "    embeddings = layers.Dense(embedding_dim, activation='relu', name=\"embedding\")(x)\n",
+        "    outputs = layers.Dense(5, activation='softmax')(embeddings)  #5 change classes\n",
+        "\n",
+        "    model = models.Model(inputs=inputs, outputs=outputs)\n",
+        "    return model"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "jZwtl7WuaebF"
       },
       "outputs": [],
       "source": [
-      "#imports\n",
+        "#imports\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -34,6 +61,8 @@
         "from sklearn.feature_selection import SelectKBest, f_classif\n",
         "import pickle\n",
         "import warnings\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import layers, models\n",
         "warnings.filterwarnings('ignore')\n",
         "np.random.seed(42)\n"
       ]
@@ -46,15 +75,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-_RIivecc0b1",
-        "outputId": "229d9c60-b9f2-43b4-8349-b4dc20400846"
+        "outputId": "71ce552d-18d7-4149-ce61-0ddf05576685"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "hybrid ai forest chnage detction system\n",
-            "generated 2025-09-19 09:22:55\n",
+            "generated 2025-12-30 09:13:21\n",
             "huber Regression:  yes\n",
             "multi index validation: yes\n",
             "savitzkygolay smoothing:  yes\n",
@@ -88,7 +117,6 @@
       },
       "outputs": [],
       "source": [
-        "#fun fact...this took wayyyy too long\n",
         "class ForestChangeDetectionSystem:\n",
         "    def __init__(self, study_area=\"Amazon Tropical Forest\", patch_size=64):\n",
         "        self.study_area = study_area\n",
@@ -463,39 +491,80 @@
         "        ])\n",
         "        return features\n",
         "\n",
-        "    def extract_cnn_spatial_features(self):\n",
-        "        print(\"\\nStage 3 Extracting cnn Spatial Features (placeholder)\")\n",
+        "    def create_synthetic_patches(self, H=16, W=16):\n",
         "\n",
-        "        print(\"here I am simulating CNN features for demo.\")\n",
-        "        print(\"in an actual use case this would most likely be replace with real cnn embeddings.\")\n",
-        "        n_cnn_features = 512\n",
-        "        cnn_features = []\n",
         "        n_pixels = len(self.time_series_ndvi)\n",
-        "        for pixel_idx in range(n_pixels):\n",
-        "            if pixel_idx % 1000 == 0:\n",
-        "                print(f\"Generating features for pixel {pixel_idx}/{n_pixels}...\")\n",
-        "            row, col = self.pixel_coordinates[pixel_idx]\n",
-        "            ndvi_ts = self.time_series_ndvi[pixel_idx]\n",
-        "            spatial_features = np.random.normal(0, 1, n_cnn_features) #random features\n",
-        "            ts_variance = np.var(ndvi_ts)                             #variance over t\n",
-        "            ts_trend = np.polyfit(range(len(ndvi_ts)), ndvi_ts, 1)[0] #trend over t\n",
-        "            ts_mean = np.mean(ndvi_ts)                                 #average ndvi\n",
-        "            ts_range = np.max(ndvi_ts) - np.min(ndvi_ts)               #rang of ndvi\n",
-        "            spatial_features[:100] += ts_variance * 5 + np.random.normal(0, 0.1, 100) #injecting some time series info\n",
-        "            spatial_features[100:200] += ts_trend * 10 + np.random.normal(0, 0.1, 100)\n",
-        "            spatial_features[200:300] += (ts_mean - 0.5) * 3 + np.random.normal(0, 0.1, 100)\n",
-        "            spatial_features[300:400] += ts_range * 4 + np.random.normal(0, 0.1, 100)\n",
-        "            spatial_features[400:450] += 0.3 * np.sin(row / 50) + 0.2 * np.cos(col / 50) #inject spatial info\n",
-        "            spatial_features[450:500] += 0.2 * (row % 100) / 100 + 0.2 * (col % 100) / 100\n",
-        "            center_distance = np.sqrt((row - 750)**2 + (col - 750)**2)                    #dist from center\n",
-        "            edge_proximity = min(row, col, 1500-row, 1500-col) / 1500                     #dist to nearest edge\n",
-        "            spatial_features[500:512] += (0.15 * np.sin(center_distance / 100) +\n",
-        "                                          0.1 * edge_proximity +\n",
-        "                                          np.random.normal(0, 0.05, 12))                  #inject more spatial info\n",
-        "            cnn_features.append(spatial_features)\n",
-        "        self.cnn_spatial_features = np.array(cnn_features)\n",
-        "        print(f\"CNN feature simulation complete.\")\n",
-        "        print(f\"Extracted {n_cnn_features} features per pixel.\")\n",
+        "        patches = np.zeros((n_pixels, H, W, 4), dtype=np.float32)\n",
+        "\n",
+        "        yy, xx = np.meshgrid(\n",
+        "            np.linspace(0, 1, H),\n",
+        "            np.linspace(0, 1, W),\n",
+        "            indexing=\"ij\"\n",
+        "        )\n",
+        "\n",
+        "        for i in range(n_pixels):\n",
+        "            ndvi = self.time_series_ndvi[i]\n",
+        "            nbr  = self.time_series_nbr[i]\n",
+        "            ndmi = self.time_series_ndmi[i]\n",
+        "            evi  = self.time_series_evi[i]\n",
+        "\n",
+        "            ndvi_mean, ndvi_std = np.mean(ndvi), np.std(ndvi)\n",
+        "            nbr_mean,  nbr_std  = np.mean(nbr),  np.std(nbr)\n",
+        "            ndmi_mean, ndmi_std = np.mean(ndmi), np.std(ndmi)\n",
+        "            evi_mean,  evi_std  = np.mean(evi),  np.std(evi)\n",
+        "\n",
+        "            trend = np.polyfit(np.arange(len(ndvi)), ndvi, 1)[0]\n",
+        "\n",
+        "            #channel 0 NDVI-like plane with gradient+trend\n",
+        "            ch0 = ndvi_mean + 0.5 * ndvi_std * (yy - 0.5) + 0.1 * trend * (xx - 0.5)\n",
+        "\n",
+        "            #channel 1 NBR-like horizontal gradient\n",
+        "            ch1 = nbr_mean + 0.3 * nbr_std * (xx - 0.5)\n",
+        "\n",
+        "            #channel 3 NDMI-like vertical gradient\n",
+        "            ch2 = ndmi_mean + 0.3 * ndmi_std * (yy - 0.5)\n",
+        "\n",
+        "            #channel 3 EVI-like diagonal variation\n",
+        "            ch3 = evi_mean + 0.3 * evi_std * (yy + xx - 1.0)\n",
+        "\n",
+        "            patch = np.stack([ch0, ch1, ch2, ch3], axis=-1)\n",
+        "            patch += 0.02 * np.random.randn(H, W, 4)\n",
+        "\n",
+        "            patches[i] = np.clip(patch, 0.0, 1.0)\n",
+        "\n",
+        "        self.synthetic_patches = patches\n",
+        "        return patches\n",
+        "\n",
+        "    def extract_cnn_spatial_features(self, epochs=5, batch_size=64, H=16, W=16, embedding_dim=512):\n",
+        "\n",
+        "        print(\"\\nTraining CNN and extracting spatial/spectral embeddings\")\n",
+        "\n",
+        "        #Creating synthetic patches from time series statistics\n",
+        "        patches = self.create_synthetic_patches(H=H, W=W)\n",
+        "        n_pixels = patches.shape[0]\n",
+        "\n",
+        "        #Using the existing labels (5 classes) as supervision\n",
+        "        y = self.label_encoder.fit_transform(self.labels)\n",
+        "\n",
+        "        #CNN\n",
+        "        cnn = build_cnn_backbone(input_shape=patches.shape[1:], embedding_dim=embedding_dim)\n",
+        "        cnn.compile(optimizer='adam',\n",
+        "                    loss='sparse_categorical_crossentropy',\n",
+        "                    metrics=['accuracy'])\n",
+        "\n",
+        "        print(f\"Training CNN on {n_pixels} synthetic patches...\")\n",
+        "        cnn.fit(patches, y, epochs=epochs, batch_size=batch_size, verbose=0)\n",
+        "\n",
+        "        #Building the embedding model output from 'embedding' layer\n",
+        "        embedding_model = models.Model(\n",
+        "            inputs=cnn.input,\n",
+        "            outputs=cnn.get_layer(\"embedding\").output\n",
+        "        )\n",
+        "\n",
+        "        embeddings = embedding_model.predict(patches, batch_size=256, verbose=0)\n",
+        "        self.cnn_spatial_features = embeddings\n",
+        "\n",
+        "        print(f\"CNN training complete. Extracted {embedding_dim}-D embeddings per pixel.\")\n",
         "        return self.cnn_spatial_features\n",
         "\n",
         "    def extract_ancillary_features(self):\n",
@@ -613,7 +682,7 @@
         "        accuracy = accuracy_score(y_test, y_pred)\n",
         "        precision, recall, f1, _ = precision_recall_fscore_support(y_test, y_pred, average='weighted')\n",
         "        print(f\"\\ntraining done\")\n",
-        "        print(f\"accuracy {accuracy:.4f} ({accuracy*100:.1f}%)\")\n",
+        "        print(f\"accuracy {accuracy:.4f} ({accuracy*100:.1f} ফেলেছে)\")\n",
         "        print(f\"Weighted F1-Score: {f1:.4f}\")\n",
         "        if USE_CALIBRATION:\n",
         "            print(f\"calibration applied.\")\n",
@@ -711,14 +780,123 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
-          "background_save": true
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "oKX_zS6gr9A0"
+        "id": "oKX_zS6gr9A0",
+        "outputId": "8059367b-b8a5-4982-d785-7ba6c0333fc1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "starting final system execution...\n",
+            "executing the complete system\n",
+            "Starting the process...\n",
+            "generating satellite time series data\n",
+            "generating pixel 0/7500...\n",
+            "generating pixel 1000/7500...\n",
+            "generating pixel 2000/7500...\n",
+            "generating pixel 3000/7500...\n",
+            "generating pixel 4000/7500...\n",
+            "generating pixel 5000/7500...\n",
+            "generating pixel 6000/7500...\n",
+            "generating pixel 7000/7500...\n",
+            "Generated 7500 pixel time series.\n",
+            "time steps 48\n",
+            "change types ['Major Deforestation' 'Minor Degradation' 'Moderate Deforestation'\n",
+            " 'Regrowth/Recovery' 'Stable Forest']\n",
+            "example labels ['Moderate Deforestation', 'Minor Degradation', 'Stable Forest', 'Minor Degradation', 'Moderate Deforestation', 'Moderate Deforestation', 'Stable Forest', 'Major Deforestation', 'Moderate Deforestation', 'Moderate Deforestation']\n",
+            "spatial tiles generated 16\n",
+            "\n",
+            "stage 2 Performing bfast analysis\n",
+            "Processing pixel 0/7500...\n",
+            "Processing pixel 1000/7500...\n",
+            "Processing pixel 2000/7500...\n",
+            "Processing pixel 3000/7500...\n",
+            "Processing pixel 4000/7500...\n",
+            "Processing pixel 5000/7500...\n",
+            "Processing pixel 6000/7500...\n",
+            "Processing pixel 7000/7500...\n",
+            "bfast analysis complete. Found 21 change candidates.\n",
+            "extracted 36 time series feature(per pixel)\n",
+            "\n",
+            "Stage 3: Training CNN and extracting spatial/spectral embeddings\n",
+            "Training CNN on 7500 synthetic patches...\n",
+            "CNN training complete. Extracted 512-D embeddings per pixel.\n",
+            "\n",
+            "Stage 4: Extracting Ancillary Features\n",
+            "ancillary feature extraction done.\n",
+            "extracted 18 features(per pixel)\n",
+            "\n",
+            "stage 5 Training gb classifier\n",
+            "otal features for training 566\n",
+            "cnn spatial features 512\n",
+            "time series features 36\n",
+            "ancillary features 18\n",
+            "\n",
+            "creating spatial train/test split...\n",
+            "using a random state 42\n",
+            "total tiles available 16\n",
+            "gave 12 tiles for training and 4 for testing.\n",
+            "pixel counts 5591 training pixels, 1909 test pixels.\n",
+            "test split ratio 0.255\n",
+            "\n",
+            "performing a feature selection...\n",
+            "selected 200 features.\n",
+            "training the gb model...\n",
+            "applying probability calibr.\n",
+            "\n",
+            "training done\n",
+            "accuracy 0.9628 (96.3 ফেলেছে)\n",
+            "Weighted F1-Score: 0.9629\n",
+            "calibration applied.\n",
+            "\n",
+            "Classification Report\n",
+            "                        precision    recall  f1-score   support\n",
+            "\n",
+            "   Major Deforestation       0.97      0.89      0.93       283\n",
+            "     Minor Degradation       0.96      0.96      0.96       403\n",
+            "Moderate Deforestation       0.88      0.93      0.90       358\n",
+            "     Regrowth/Recovery       1.00      1.00      1.00       230\n",
+            "         Stable Forest       1.00      1.00      1.00       635\n",
+            "\n",
+            "              accuracy                           0.96      1909\n",
+            "             macro avg       0.96      0.96      0.96      1909\n",
+            "          weighted avg       0.96      0.96      0.96      1909\n",
+            "\n",
+            "\n",
+            "creating confusion matrix plot\n",
+            "Confusion matrix plot saved as 'forest_confusion_matrix.png'.\n",
+            "\n",
+            "per Class f1 Scores\n",
+            "Major Deforestation: 0.926\n",
+            "Minor Degradation: 0.962\n",
+            "Moderate Deforestation: 0.904\n",
+            "Regrowth/Recovery: 1.000\n",
+            "Stable Forest: 1.000\n",
+            "\n",
+            "execution complete\n",
+            "\n",
+            "Final performance summary:\n",
+            "test Accuracy 96.3%\n",
+            "weighted f1 Score 0.9629\n",
+            "number of features used 200\n",
+            "change rate detected 0.3%\n",
+            "probability calibration Applied Yes\n",
+            "\n",
+            "System object saved to 'final_forest_change_system.pkl'.\n",
+            "Confusion matrix plot saved to 'forest_confusion_matrix.png'.\n",
+            "Whole thing is complete\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"starting final system execution...\")\n",
         "system = run_complete_system()\n",
@@ -729,7 +907,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN95BLKqMsaPARvCW7GCdlP"
+      "authorship_tag": "ABX9TyNhPlr4sf8KU7LaalDv/53b"
     },
     "kernelspec": {
       "display_name": "Python 3",
